--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             width: 300px;
             margin-bottom: 20px;
+            align-items: center;
         }
         .form-container h2, .admin-container h2 {
             margin-top: 0;
+            align-items: center;
         }
         .form-container input, .form-container textarea, .admin-container input {
             width: 100%;
@@ -40,6 +42,7 @@
             padding: 8px;
             border: 1px solid #ccc;
             border-radius: 4px;
+            align-items: center;
         }
         .form-container button, .admin-container button {
             background-color: #4CAF50;
