--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </main>
 
     <script>
-        const adminPassword = "admin123"; // Set your admin password here
+        const adminPassword = "securepassword"; // Set your admin password here
         let submissions = JSON.parse(localStorage.getItem("submissions")) || [];
 
         function saveSubmissions() {
